[package]
name = "unlab-gpu"
version = "0.1.0"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
ctrlc = "3.5"
getopts = "0.2"
home = ">=0.5.0,<=0.5.9"
image = { version = "0.24", optional = true, default-features = false, features = ["png"] }
plotters = { version = ">=0.3.3,<=0.3.6", optional = true, default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "ttf", "all_series", "all_elements"] }
rand = "0.9"
rustyline = { version = "14.0", default-features = false, features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive", "rc"] }
softbuffer = { version = "0.4", optional = true }
toml = "0.8"
unmtx-gpu = { version = "0.1.7", default-features = false }
winit = { version = "0.30", optional = true }
# Holded versions.
dlopen2_derive = ">=0.4.0,<=0.4.1"
indexmap = ">=2.0.0,<=2.11.4"

[dev-dependencies]
sealed_test = "1.1.0"

[features]
default = ["opencl", "plot"]
default_cublas = ["unmtx-gpu/default_cublas"]
default_mma = ["unmtx-gpu/default_mma"]
opencl = ["unmtx-gpu/opencl"]
cuda = ["unmtx-gpu/cuda"]
cuda-version-from-build-system = ["cuda", "unmtx-gpu/cuda-version-from-build-system"]
cuda-12060 = ["cuda", "unmtx-gpu/cuda-12060"]
cuda-12050 = ["cuda", "unmtx-gpu/cuda-12050"]
cuda-12040 = ["cuda", "unmtx-gpu/cuda-12040"]
cuda-12030 = ["cuda", "unmtx-gpu/cuda-12030"]
cuda-12020 = ["cuda", "unmtx-gpu/cuda-12020"]
cuda-12010 = ["cuda", "unmtx-gpu/cuda-12010"]
cuda-12000 = ["cuda", "unmtx-gpu/cuda-12000"]
cuda-11080 = ["cuda", "unmtx-gpu/cuda-11080"]
cuda-11070 = ["cuda", "unmtx-gpu/cuda-11070"]
cuda-11060 = ["cuda", "unmtx-gpu/cuda-11060"]
cuda-11050 = ["cuda", "unmtx-gpu/cuda-11050"]
cuda-11040 = ["cuda", "unmtx-gpu/cuda-11040"]
plot = ["dep:image", "dep:plotters", "dep:softbuffer", "dep:winit"]
