[package]
name = "unlab-gpu"
version = "0.1.1"
authors = ["Łukasz Szpakowski <luckboy@vp.pl>"]
edition = "2018"
license = "MPL-2.0"
description = "Micro scripting language for neural networks that uses unmtx-gpu."
repository = "https://github.com/luckboy/unlab-gpu"
documentation = "https://docs.rs/unlab-gpu"
categories = ["mathematics", "science"]
keywords = ["language", "scripting-language", "matrix", "gpu", "neural-network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["opencl", "cuda", "cuda-12060"]

[dependencies]
clap = { version = ">=4.5.0,<=4.5.61", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
ctrlc = "3.5"
getopts = "0.2"
home = ">=0.5.0,<=0.5.9"
rand = "0.9"
rustyline = { version = "14.0", default-features = false, features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
unmtx-gpu = { version = "0.1.9", default-features = false }
# pkg
bzip2 = "0.5.0"
curl = ">=0.4.0,<=0.4.47"
flate2 = "1.1.5"
jammdb = "0.11"
liblzma = "0.4.1"
tar = "0.4"
zip = ">=4.0,<=4.2"
# doc
latex2mathml = "0.2.3"
markdown = "1.0"
opener = "0.8"
# plot
image = { version = "0.24", optional = true, default-features = false, features = ["png"] }
plotters = { version = ">=0.3.3,<=0.3.6", optional = true, default-features = false, features = ["bitmap_backend", "bitmap_encoder", "svg_backend", "ttf", "all_series", "all_elements"] }
softbuffer = { version = "0.4", optional = true }
winit = { version = "0.30", optional = true }
# Holded versions.
clap_lex = ">=1.0.0,<=1.0.1"
deflate64 = ">=0.1.9,<=0.1.10"
dlopen2_derive = ">=0.4.0,<=0.4.1"
indexmap = ">=2.0.0,<=2.11.4"
openssl-sys = ">=0.9.64,<=0.9.114"
time = ">=0.3.37,<=0.3.41"
unicode-segmentation = ">=1.0.0,<=1.12.0"
zeroize = ">=1.8.0,<=1.8.2"
zeroize_derive = ">=1.3.0,<=1.4.3"
# Holded versions for plot.
pathfinder_simd = { version = ">=0.5.3,<=0.5.5", optional = true }
plotters-backend = { version = ">=0.3.3,<=0.3.6", optional = true }
plotters-bitmap = { version = ">=0.3.3,<=0.3.6", optional = true }
plotters-svg = { version = ">=0.3.3,<=0.3.6", optional = true }

[dev-dependencies]
sealed_test = "1.1.0"
# Holded versions.
tempfile = ">=3.0.0,<=3.24.0"

[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
# Holded versions for plot.
wayland-backend = { version = ">=0.3.0,<=0.3.15", optional = true }
wayland-client = { version = ">=0.31.1,<=0.31.14", optional = true }
wayland-csd-frame = { version = "=0.3.0", optional = true }
wayland-cursor = { version = ">=0.31.0,<=0.31.14", optional = true }
wayland-protocols = { version = ">=0.32.1,<=0.32.12", optional = true, features = ["client", "staging", "unstable"] }
wayland-protocols-plasma = { version = ">=0.3.0,<=0.3.12", optional = true, features = ["client"] }
wayland-protocols-wlr = { version = ">=0.3.1,<=0.3.12", optional = true, features = ["client"] }
wayland-scanner = { version = ">=0.31.0,<=0.31.10", optional = true }

[features]
default = ["opencl", "plot"]
default_cublas = ["unmtx-gpu/default_cublas"]
default_mma = ["unmtx-gpu/default_mma"]
opencl = ["unmtx-gpu/opencl"]
cuda = ["unmtx-gpu/cuda"]
cuda-version-from-build-system = ["cuda", "unmtx-gpu/cuda-version-from-build-system"]
cuda-12060 = ["cuda", "unmtx-gpu/cuda-12060"]
cuda-12050 = ["cuda", "unmtx-gpu/cuda-12050"]
cuda-12040 = ["cuda", "unmtx-gpu/cuda-12040"]
cuda-12030 = ["cuda", "unmtx-gpu/cuda-12030"]
cuda-12020 = ["cuda", "unmtx-gpu/cuda-12020"]
cuda-12010 = ["cuda", "unmtx-gpu/cuda-12010"]
cuda-12000 = ["cuda", "unmtx-gpu/cuda-12000"]
cuda-11080 = ["cuda", "unmtx-gpu/cuda-11080"]
cuda-11070 = ["cuda", "unmtx-gpu/cuda-11070"]
cuda-11060 = ["cuda", "unmtx-gpu/cuda-11060"]
cuda-11050 = ["cuda", "unmtx-gpu/cuda-11050"]
cuda-11040 = ["cuda", "unmtx-gpu/cuda-11040"]
plot = ["dep:image", "dep:plotters", "dep:softbuffer", "dep:winit", "dep:pathfinder_simd", "dep:plotters-backend", "dep:plotters-bitmap", "dep:plotters-svg", "dep:wayland-backend", "dep:wayland-client", "dep:wayland-csd-frame", "dep:wayland-cursor", "dep:wayland-protocols", "dep:wayland-protocols-plasma", "dep:wayland-protocols-wlr", "dep:wayland-scanner"]
